--- a/Escuela_H2/nbproject/project.properties
+++ b/Escuela_H2/nbproject/project.properties
@@ -24,13 +24,12 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Escuela_Herencia.jar
+dist.jar=${dist.dir}/Escuela_H2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${reference.Escuela_H2.jar}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -55,13 +54,11 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=frmPantallaPrincipal
+main.class=escuela_h2.Escuela_H2
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-project.Escuela_H2=../../Escuela_H2
-reference.Escuela_H2.jar=${project.Escuela_H2}/dist/Escuela_H2.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
